argocd/manifests/pocketid/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocketid
  labels:
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/managed-by: argocd
