argocd/manifests/pocketid/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketid
  namespace: pocketid
spec:
  selector:
    app: pocketid
  ports:
    - port: 1411
      targetPort: 1411
      protocol: TCP
  type: ClusterIP
